--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -177,7 +177,9 @@ jobs:
     name: Build Erlang/OTP (macOS)
     runs-on: macos-12
     needs: pack
-    if: needs.pack.outputs.c-code-changes
+    # TODO:
+    # if: needs.pack.outputs.c-code-changes
+    if: false
     env:
       WXWIDGETS_VERSION: 3.1.5
     steps:
@@ -227,6 +229,8 @@ jobs:
       TARGET_ARCH: aarch64-apple-ios
     name: Build Erlang/OTP (iOS)
     runs-on: macos-12
+    # TODO
+    if: false
     needs: pack
     steps:
       - uses: actions/checkout@v4.1.7
@@ -359,7 +363,9 @@ jobs:
     name: Build Erlang/OTP (Types and Flavors)
     runs-on: ubuntu-latest
     needs: pack
-    if: needs.pack.outputs.c-code-changes
+    # TODO
+    if: false
+    # if: needs.pack.outputs.c-code-changes
 
     steps:
       - uses: actions/checkout@v4.1.7
@@ -382,7 +388,9 @@ jobs:
     name: Build Erlang/OTP
     runs-on: ubuntu-latest
     needs: pack
-    if: needs.pack.outputs.c-code-changes
+    # TODO
+    # if: needs.pack.outputs.c-code-changes
+    if: false
 
     strategy:
       matrix:
@@ -400,6 +408,8 @@ jobs:
     name: Build and check documentation
     runs-on: ubuntu-latest
     needs: pack
+    # TODO
+    if: false
     steps:
       - uses: actions/checkout@v4.1.7
       - uses: ./.github/actions/build-base-image
@@ -445,6 +455,8 @@ jobs:
     name: Run static analysis
     runs-on: ubuntu-latest
     needs: pack
+    # TODO
+    if: false
     steps:
       - uses: actions/checkout@v4.1.7
       - uses: ./.github/actions/build-base-image
@@ -467,7 +479,9 @@ jobs:
     name: Test Erlang/OTP
     runs-on: ubuntu-latest
     needs: pack
-    if: needs.pack.outputs.changes != '[]'
+    # TODO
+    # if: needs.pack.outputs.changes != '[]'
+    if: false
     strategy:
       matrix:
         # type: ${{ fromJson(needs.pack.outputs.all) }}
